<resources>
    <string name="app_name">Popular Movies</string>
    <string name="tmdb_api_key">YOUR_API_KEY_HERE</string>
    <string name="sort_by_popularity">Sort By Popularity</string>
    <string name="sort_by_top_rated">Sort By Top Rated</string>
    <string name="back_menu">Back</string>
    <string name="check_internet">Please check your Internet Connection</string>
    <string name="json_tmdb_id" translatable="false">id</string>
    <string name="json_tmdb_voteavarage" translatable="false">vote_average</string>
    <string name="json_tmdb_title" translatable="false">title</string>
    <string name="json_tmdb_posterpath" translatable="false">poster_path</string>
    <string name="json_tmdb_overview" translatable="false">overview</string>
    <string name="json_tmdb_release_date" translatable="false">release_date</string>
    <string name="json_tmdb_vote_count" translatable="false">vote_count</string>
    <string name="release_date">Release Date: </string>
    <string name="image_of_the_movie_poster">Image of the Movie Poster</string>
    <string name="accessibility_movie_trailer">Touch to open the movie trailer</string>
    <string name="my_favorite_movies">My Favorite Movies</string>
    <string name="empty_favorite_movies_list">Your Favorite Movies List is Empty</string>
    <string name="add_movie_to_favorites">Add Movie to Favorites</string>
    <string name="remove_movie_from_favorites">Remove Movie from Favorites</string>
    <string name="synopsis">Synopsis</string>
    <string name="trailers_expanded">Trailers (-)</string>
    <string name="trailers_shrinked">Trailers (+)</string>
    <string name="reviews_expanded">Reviews (-)</string>
    <string name="reviews_shrinked">Reviews (+)</string>
    <string name="youtube_app_not_found">Youtube app not Installed</string>
</resources>
