<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:scrollbars="vertical"
    android:background="#B0BEC5">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B0BEC5" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v4.widget.ContentLoadingProgressBar
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:id="@+id/pbLoadMovieDetails"/>


            <ImageView
                android:id="@+id/iv_detail_poster"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/image_of_the_movie_poster" />

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_detail_poster"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/add_to_favorite"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_below="@+id/tv_movie_title"
                android:paddingTop="10sp"
                android:layout_centerHorizontal="true"
                android:text="@string/add_movie_to_favorites"
                android:onClick="addDeleteMovieFavorites" />

            <LinearLayout
                android:id="@+id/ll_movie_parameters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle"
                android:layout_below="@id/add_to_favorite"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10sp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"/>

                <TextView
                    android:id="@+id/tv_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10sp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_movie_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_movie_parameters"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_synopsis_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/synopsis"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_synopsis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_trailer_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/ll_movie_synopsis"
                android:text="@string/trailers_expanded"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:onClick="hideShowTrailers"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_trailer_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_trailer_title">
            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tv_reviews_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/rv_trailer_list"
                android:text="@string/reviews_expanded"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:onClick="hideShowReviews"/>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_review_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_reviews_title">
            </android.support.v7.widget.RecyclerView>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>
